--- a/views/index.html
+++ b/views/index.html
@@ -37,8 +37,10 @@
   {% endif %}
   </div>
 
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="/js/app.js"></script>
+  {% if not NO_JS %}
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="/js/app.js"></script>
+  {% endif %}
 
 </body>
 </html>
